Add external repository

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
-   
+
    <build>
       <plugins>
          <!-- JAR Manifest Plugin -->
@@ -36,6 +36,39 @@
                </archive>
             </configuration>
          </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+               <compilerVersion>1.6</compilerVersion>
+            </configuration>
+         </plugin>
       </plugins>
+
+      <extensions>
+         <extension>
+            <groupId>org.springframework.build</groupId>
+            <artifactId>aws-maven</artifactId>
+            <version>5.0.0.RELEASE</version>
+         </extension>
+      </extensions>
    </build>
+
+   <!-- Custom repo to fetch new artifacts -->
+   <repositories>
+      <repository>
+         <id>releases</id>
+         <name>Releases S3 Rage</name>
+         <url>https://s3.amazonaws.com/m2-repo/release/</url>
+      </repository>
+   </repositories>
+
+   <distributionManagement>
+      <repository>
+         <id>aws-release</id>
+         <name>AWS Release Repository</name>
+         <url>s3://m2-repo/release</url>
+      </repository>
+   </distributionManagement>
 </project>
